.azure/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privee
  namespace: default
spec:
  selector:
    matchLabels:
      app: privee
  replicas: 3
  template:
    metadata:
      labels:
        app: privee
    spec:
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kv-privee"
      dnsPolicy: ClusterFirst
      containers:
      - name: privee
        image: privee.azurecr.io/privee:latest
        # Start the Phoenix server
        command: ["./bin/server"]
        # command: [ "sh", "-c"]
        # args: ["while true; do echo 'yo' && sleep 5; done;"]
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          limits:
            memory: "520Mi"
            cpu: "500m"
        ports:
        - name: epmd
          containerPort: 4369
          protocol: TCP
        - name: app-port
          containerPort: 4000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 5
          periodSeconds: 5
