.azure/k8s/headless-service.yml
---
# Headless Service for Erlang clustering
apiVersion: v1
kind: Service
metadata:
  name: privee-app-svc-headless
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 4369
      targetPort: epmd
      protocol: TCP
      name: epmd
  selector:
    app: privee
