.azure/k8s/service.yml
# ClusterIP Service for the main application, for the ingress to forward traffic to.
apiVersion: v1
kind: Service
metadata:
  name: privee
spec:
  type: ClusterIP
  selector:
    app: privee
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
