.azure/k8s/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privee-ingress
  annotations:
    # The add-on will fetch cert from Key Vault via CSI driver. See docs for details.
    # [1](https://learn.microsoft.com/en-us/azure/aks/app-routing-dns-ssl)
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts: [ "app.${YOUR_DOMAIN}" ]
      # The secretName must be "keyvault-<ingress-name>" as documented.
      # The controller mounts the cert and syncs to this secret.
      # [1](https://learn.microsoft.com/en-us/azure/aks/app-routing-dns-ssl)
      secretName: keyvault-privee-ingress
  rules:
    - host: app.${YOUR_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privee
                port:
                  number: 80
